--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -135,6 +135,11 @@
     display: none;
     visibility: hidden;
   }
+  html:not(.js) & {
+    display: none;
+    visibility: hidden;
+  }
+
   .home-hero__animation-control-line {
     height: rem(25);
     border-left: rem(6) solid $white;
@@ -467,12 +472,18 @@
     @include media-breakpoint-up(xl) {
       max-width: rem(258);
     }
+    html:not(.js) & {
+      cursor: initial;
+    }
   }
   .video-embed__button {
     top: 78%;
     max-width: rem(56);
     max-height: rem(56);
     margin-left: rem(-28);
+    html:not(.js) & {
+      display: none;
+    }
   }
   .iastate22-modal__media {
     &:before {
