correcting issue with main navigation when scrolling down the page, some of the dropdown menus were not clickable

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -159,6 +159,7 @@
   .headroom--unpinned & {
     @include media-breakpoint-up(xl) {
       opacity: 0;
+      visibility: hidden;
     }
   }
   a {
