--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -220,6 +220,7 @@
   .headroom--unpinned & {
     @include media-breakpoint-up(xl) {
       opacity: 0;
+      visibility: hidden;
     }
   }
   a {
