updating all font-awesome instances to use the fa-iastate22- prefix

--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -16,7 +16,7 @@
     <div class="site-header__search">
       <a href="#site-search" class="site-header__search-toggle">
         <span class="visible-for-screen-readers">Search</span>
-        <span class="fak fa-id5-magnifying-glass"></span>
+        <span class="fak fa-iastate22-magnifying-glass" aria-hidden="true"></span>
       </a>
       <a href="#" class="site-header__search-close">
         <span class="visible-for-screen-readers">Close Search</span>
@@ -25,7 +25,7 @@
       <form class="site-header__search-form-desktop">
         <label class="visible-for-screen-readers" for="searchDesktop">Search</label>
         <input type="search" id="searchDesktop" name="search" placeholder="Search">
-        <button type="submit"><span class="fak fa-id5-magnifying-glass"></span><span class="visible-for-screen-readers">Submit Search</span></button>
+        <button type="submit"><span class="fak fa-iastate22-magnifying-glass" aria-hidden="true"></span><span class="visible-for-screen-readers">Submit Search</span></button>
       </form>
     </div>
   </div>
@@ -80,7 +80,7 @@
                   <form class="site-header__search-form-mobile">
                     <label class="visible-for-screen-readers" for="searchMobile">Search</label>
                     <input type="search" id="searchMobile" name="search" placeholder="Search">
-                    <button type="submit"><span class="fak fa-id5-magnifying-glass"></span><span class="visible-for-screen-readers">Submit Search</span></button>
+                    <button type="submit"><span class="fak fa-iastate22-magnifying-glass" aria-hidden="true"></span><span class="visible-for-screen-readers">Submit Search</span></button>
                   </form>
                 </nav>
               </div>
