--- a/src/components/site-footer/site-footer.twig
+++ b/src/components/site-footer/site-footer.twig
@@ -12,7 +12,7 @@
         </li>
         <li>
           <a href="#" target="_blank">
-            <i class="fak fa-id5-instagram" aria-hidden="true"></i>
+            <i class="fak fa-iastate22-instagram" aria-hidden="true"></i>
             <span class="visible-for-screen-readers">Instagram</span>
           </a>
         </li>
