--- a/src/components/pages/home.twig
+++ b/src/components/pages/home.twig
@@ -148,7 +148,7 @@
       <li>
         <article class="home-events-news__item">
           <span class="home-events__event-date">{{ event.date|date("M d") }}</span>
-          <h2 class="home-events-news__item-title"><a href="{{ event.link.url}}">{{ event.link.title}}</a></h2>
+          <h2 class="home-events-news__item-title"><a href="{{ event.link.url}}">{{ event.link.title}}<span class="arrow"></span></a></h2>
         </article>
       </li>
       {% endfor %}
@@ -161,7 +161,7 @@
       {% for news in events_news.news_list %}
       <li data-image="{{ news.imageSrc }}">
         <article class="home-events-news__item">
-          <h2 class="home-events-news__item-title"><a href="{{ news.link.url}}">{{ news.link.title}}</a></h2>
+          <h2 class="home-events-news__item-title"><a href="{{ news.link.url}}">{{ news.link.title}}<span class="arrow"></span></a></h2>
           <span class="home-events__news-date">{{ news.date|date("F d") }}</span>
         </article>
       </li>
