--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -546,7 +546,9 @@
 .home-academics {
   @extend %outer-pad-x;
   padding-top: rem(70);
-  padding-bottom: rem(60);
+  @include media-breakpoint-up(md) {
+    padding-bottom: rem(60);
+  }
   @include media-breakpoint-up(lg) {
     display: flex;
     flex-wrap: wrap;
@@ -579,7 +581,10 @@
 }
 
 .home-academics__image-grid {
-  margin: rem(50) rem(-36);
+  margin: rem(50) rem(-36) 0;
+  @include media-breakpoint-up(md) {
+    margin-bottom: rem(50);
+  }
   @include media-breakpoint-up(lg) {
     flex: 0 1 auto;
     width: 60%;
@@ -593,6 +598,7 @@
     }
     &:nth-child(2),
     &:last-child {
+      margin-bottom: 0;
       @include media-breakpoint-up(md) {
         width: calc(50% - #{rem(5)});
       }
