https://bugify.idfive.com/issues/27549

--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -6,6 +6,10 @@
     min-height: 100vh;
     max-height: none;
   }
+  @include media-breakpoint-up(xxl) {
+    margin-left: rem(-200);
+    margin-right: rem(-200);
+  }
 }
 
 .home-hero__media {
@@ -50,6 +54,9 @@
   transform: translateY(-50%);
   @include media-breakpoint-up(xl) {
     padding-right: rem(190);
+  }
+  @include media-breakpoint-up(xxl) {
+    left: rem(200);
   }
   .iastate22-button {
     margin-top: rem(30);
@@ -105,6 +112,9 @@
     width: 92%;
     left: -2%;
   }
+  @include media-breakpoint-up(xxl) {
+    left: rem(200);
+  }
   svg {
     width: 100%;
     path {
@@ -134,6 +144,9 @@
   @media screen and (prefers-reduced-motion: reduce) {
     display: none;
     visibility: hidden;
+  }
+  @include media-breakpoint-up(xxl) {
+    right: rem(230);
   }
   html:not(.js) & {
     display: none;
@@ -464,6 +477,21 @@
   @include media-breakpoint-up(lg) {
     padding-top: rem(158);
     padding-bottom: rem(190);
+    position: relative;
+  }
+  &:before {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-red;
+      pointer-events: none;
+    }
   }
   .iastate22-blockquote__portrait {
     max-width: rem(258);
@@ -825,6 +853,20 @@
       left: 0;
       right: 0;
       height: rem(293);
+    }
+  }
+  &:after {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      height: rem(757);
+      bottom: 0;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $off-white;
+      pointer-events: none;
     }
   }
   .home-link-button {
@@ -1192,10 +1234,25 @@
   @extend %outer-pad-x;
   display: flex;
   flex-direction: column-reverse;
+  position: relative;
   @include media-breakpoint-up(xl) {
     flex-direction: row;
     align-items: center;
     padding-right: 0;
+  }
+  &:before {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-red;
+      pointer-events: none;
+    }
   }
 }
 
@@ -1553,6 +1610,20 @@
     padding-right: rem(81);
     padding-left: rem(81);
   }
+  &:after {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: rem(413);
+      bottom: 0;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-red;
+      pointer-events: none;
+    }
+  }
   &:before {
     @include media-breakpoint-up(lg) {
       content: "";
@@ -1685,6 +1756,20 @@
     padding-top: 114.49%;
     @include media-breakpoint-up(sm) {
       padding-top: 45.83%;
+    }
+  }
+  &:after {
+    @include media-breakpoint-up(xxl) {
+      content: "";
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      width: 150vw;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: -1;
+      background-color: $iastate-red;
+      pointer-events: none;
     }
   }
   .home-full-width-campus-photo__desktop {
