--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -115,7 +115,8 @@
       content: "";
       position: absolute;
       top: 0;
-      left: 0;
+      left: -50vw;
+      width: 150vw;
       right: 0;
       background: transparent linear-gradient(180deg, #000000 0%, #00000000 100%) 0% 0% no-repeat padding-box;
       height: rem(165);
