--- a/src/components/home-announcement/_home-announcement.scss
+++ b/src/components/home-announcement/_home-announcement.scss
@@ -1,6 +1,6 @@
 .home-announcement {
   background-color: $iastate-dark-blue;
-  padding: rem(12) rem(60);
+  padding: rem(12) rem(60) rem(12) rem(40);
   display: flex;
   align-items: center;
   max-width: rem(514);
@@ -20,7 +20,7 @@
   font-size: rem(16);
   font-weight: 700;
   line-height: (26 / 16);
-  padding-left: rem(23);
+  padding-left: rem(40);
   @include media-breakpoint-up(sm) {
     padding-left: rem(17);
   }
