updating functionality for homepage Finding the Solutions card section to be clickable on desktop, also updating card.scss for the hover state

--- a/src/components/card/_card.scss
+++ b/src/components/card/_card.scss
@@ -37,8 +37,9 @@
   }
   &:before {
     content: "";
-    background-color: $iastate-gold;
+    background-color: transparent;
     position: absolute;
+    border: rem(8) solid $iastate-gold;
     top: rem(-8);
     left: rem(-8);
     right: rem(-8);
