--- a/src/components/site-footer/site-footer.twig
+++ b/src/components/site-footer/site-footer.twig
@@ -1,4 +1,4 @@
-<div class="site-footer">
+<footer class="site-footer">
   <div class="site-footer__flex-wrap">
     <img class="site-footer__logo" src="{{ "../../img/iowa-state-university-logo-with-tagline-sci-tech.svg"|path }}" alt="Iowa State University of Science and Technology" />
 
@@ -79,4 +79,4 @@
     </nav>
     <div class="site-footer__copyright"><p>&copy; {{copyright}}</p></div>
   </div>
-</div>
+</footer>
