https://bugify.idfive.com/issues/27562

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -226,6 +226,10 @@
     transition: 0.2s color ease-in-out;
     cursor: pointer;
   }
+  &[aria-expanded="true"] {
+    opacity: 0;
+    visibility: hidden;
+  }
   &:hover {
     @include media-breakpoint-up(xl) {
       color: $iastate-red;
@@ -810,7 +814,6 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
   }
 
   button[type="submit"] {
-    background-color: $white;
     border: none;
     font-size: rem(25);
     position: absolute;
@@ -825,7 +828,6 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
     line-height: 1.3;
     &:hover {
       color: $iastate-maroon;
-      background-color: $white;
       padding: 0 rem(7);
     }
   }
@@ -892,7 +894,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
 .site-header__search-close {
   z-index: 11;
   position: relative;
-  background-color: $white;
+  background-color: transparent;
   border: none;
   cursor: pointer;
   font-size: rem(26);
