--- a/src/components/site-header/site-header.twig
+++ b/src/components/site-header/site-header.twig
@@ -56,7 +56,7 @@
                           <ul{% if link.children|length > 5 %} class="two-column-dropdown"{% endif %}>
                             {% for child in link.children %}
                               <li>
-                                <a href="{{ child.url }}">{{ child.title }}</a>
+                                <a class="link-tertiary" href="{{ child.url }}">{{ child.title }}<span class="arrow"></span></a>
                               </li>
                             {% endfor %}
                           </ul>
