--- a/src/components/pages/_home.scss
+++ b/src/components/pages/_home.scss
@@ -77,10 +77,11 @@
     width: 93%;
   }
   @include media-breakpoint-up(md) {
-    font-size: 8vw;
+    font-size: 10.5vw;
+    line-height: 1.1;
   }
   @include media-breakpoint-up(xl) {
-    font-size: 6vw;
+    font-size: 8.5vw;
   }
   @include media-breakpoint-up(xxl) {
     font-size: rem(110);
@@ -107,12 +108,11 @@
   }
   @include media-breakpoint-up(md) {
     transform: translateY(-50%);
-    max-width: rem(900);
-    left: 0;
+    width: 120%;
+    left: -13%;
   }
   @include media-breakpoint-up(xl) {
     max-width: rem(1400);
-    transform: translateY(-40%);
     width: 92%;
     left: -2%;
   }
