https://bugify.idfive.com/issues/27579

--- a/src/components/site-footer/_site-footer.scss
+++ b/src/components/site-footer/_site-footer.scss
@@ -368,6 +368,7 @@
   ul {
     @include media-breakpoint-up(md) {
       column-count: 2;
+      column-gap: 0;
     }
     @include media-breakpoint-up(xl) {
       column-count: 1;
