correcting issue in site-header.scss where desktop search had unwanted background-color

--- a/src/components/site-header/_site-header.scss
+++ b/src/components/site-header/_site-header.scss
@@ -1072,6 +1072,7 @@ a.site-header__mega-menu-main-nav-dropdown-parent {
     line-height: 1.3;
     &:hover {
       color: $iastate-maroon;
+      background-color: transparent;
       padding: 0 rem(7);
     }
   }
