--- a/src/components/breadcrumb/_breadcrumb.scss
+++ b/src/components/breadcrumb/_breadcrumb.scss
@@ -47,5 +47,28 @@
         transform: rotate(-45deg);
       }
     }
+    .iastate22-breadcrumb--top-level-pages & {
+      display: none;
+      @include media-breakpoint-up(md) {
+        display: inline-block;
+      }
+      &:first-child {
+        display: inline-block;
+        padding-left: rem(13);
+        @include media-breakpoint-up(md) {
+          padding-left: initial;
+        }
+        &:after {
+          right: initial;
+          left: 0;
+          transform: rotate(135deg);
+          @include media-breakpoint-up(md) {
+            right: rem(-15);
+            left: initial;
+            transform: rotate(-45deg);
+          }
+        }
+      }
+    }
   }
 }
