--- a/src/components/pages/_admission-and-aid.scss
+++ b/src/components/pages/_admission-and-aid.scss
@@ -1,12 +1,40 @@
+.admission-and-aid {
+  main {
+    padding-top: 0;
+  }
+}
+
 .admission-aid-hero {
   position: relative;
+  .hero__subnav-wrap {
+    margin-top: rem(-33);
+    left: rem(36);
+    @include media-breakpoint-up(lg) {
+      top: initial;
+      right: initial;
+      max-width: none;
+      margin-top: rem(-23);
+    }
+    @include media-breakpoint-up(xl) {
+      left: rem(181);
+    }
+  }
 }
 
 .admission-aid-hero__breadcrumbs {
   position: absolute;
   z-index: 1;
   left: rem(20);
-  top: rem(5);
+  top: rem(60);
+  @include media-breakpoint-up(md) {
+    left: rem(36);
+  }
+  @include media-breakpoint-up(xl) {
+    top: rem(127);
+  }
+  @include media-breakpoint-up(xxl) {
+    left: rem(82);
+  }
   .iastate22-breadcrumb__list {
     li {
       &:after {
@@ -21,12 +49,11 @@
 
 .admission-aid-hero__media {
   @extend %responsive-img;
-  max-height: 95vh;
-  min-height: rem(667);
   @include media-breakpoint-up(md) {
-    min-height: rem(800);
-    height: 100vh;
-    max-height: rem(1500);
+    min-height: rem(600);
+  }
+  @include media-breakpoint-up(lg) {
+    min-height: none;
   }
 
   &:before {
@@ -64,26 +91,102 @@
   }
 }
 
-.admission-aid-hero__content-wrapper {
-  position: absolute;
-  bottom: 25%;
-  z-index: 1;
-}
-
 .admission-aid-hero__title {
   color: $white;
+  width: 70%;
+  position: relative;
+  z-index: 2;
+  font-size: 11.5vw;
+  line-height: 1.4;
+  position: absolute;
+  top: 75%;
+  transform: translateY(-75%);
+  z-index: 1;
+  left: rem(36);
+  margin: 0;
+  padding: 0;
+  @include media-breakpoint-up(sm) {
+    font-size: 10vw;
+  }
+  @include media-breakpoint-up(md) {
+    font-size: rem(70);
+    line-height: (93 / 70);
+    width: 50%;
+  }
+  @include media-breakpoint-up(lg) {
+    width: auto;
+    top: 57%;
+    transform: translateY(-57%);
+  }
+  @include media-breakpoint-up(xl) {
+    left: rem(82);
+  }
 }
 
 .admission-aid-hero__graphic {
-  z-index: 1;
   position: absolute;
-  svg {
-    mix-blend-mode: multiply;
-    width: 100%;
-    path {
-      fill: $iastate-red;
-      fill: green;
-      isolation: isolate;
-    }
+  width: 109vw;
+  left: rem(-13);
+  mix-blend-mode: multiply;
+  top: 90%;
+  transform: translateY(-90%);
+  @include media-breakpoint-up(md) {
+    left: rem(-3);
+    width: 90vw;
+    transform: none;
+    top: initial;
+    bottom: rem(-61);
+    max-width: rem(1100);
   }
+  @include media-breakpoint-up(lg) {
+    bottom: rem(-70);
+  }
+  @include media-breakpoint-up(xl) {
+    left: rem(22);
+  }
+
+  svg {
+    width: 100%;
+    height: auto;
+    fill: $iastate-red;
+    isolation: isolate;
+  }
+}
+
+// Explore Section
+.admission-aid-explore {
+  padding: rem(115) rem(36) rem(50);
+  .video-embed {
+    margin: 0 auto;
+    max-width: rem(1060);
+  }
+  .video-embed__media-wrap {
+    margin-left: rem(-36);
+    margin-right: rem(-36);
+  }
+  .video-embed__caption {
+    text-align: center;
+  }
+}
+
+.admission-aid-explore__title {
+  @extend %h2-yellow-border;
+  text-align: center;
+  font-size: rem(37);
+  line-height: (48 / 37);
+  @include media-breakpoint-up(lg) {
+    font-size: rem(43);
+    line-height: (66 / 43);
+  }
+  &:after {
+    left: 50%;
+    margin-left: rem(-25);
+  }
+}
+
+.admission-aid-explore__intro {
+  text-align: center;
+  margin: rem(32) auto rem(46);
+  max-width: rem(628);
+  line-height: (29 / 18);
 }
