--- a/src/components/pages/admission-and-aid.twig
+++ b/src/components/pages/admission-and-aid.twig
@@ -1,5 +1,5 @@
 <script>
-  document.body.classList.add("admission-and-aid");
+  document.body.classList.add("admission-and-aid", "top-level-page");
 </script>
 
 <div class="admission-aid-hero">
@@ -10,13 +10,21 @@
 		<img class="admission-aid-hero__media-mobile" src="{{ hero.image_mobile|path }}" alt="" />
     <img class="admission-aid-hero__media-desktop" src="{{ hero.image_desktop|path }}" alt="" />
 	</div>
-  <div class="admission-aid-hero__content-wrapper">
-    <h1 class="admission-aid-hero__title">{{ hero.title }}</h1>
-    <div class="admission-aid-hero__graphic">
-      <svg preserveAspectRatio="xMidYMid meet" width="800" height="600" xmlns="http://www.w3.org/2000/svg"><path d="m582 75 74 318 125 69-350 104L22 428 3 264v-85L582 75z"/></svg>
-    </div>
+  <h1 class="admission-aid-hero__title">{{ hero.title }}</h1>
+  <div class="admission-aid-hero__graphic">
+    <svg viewBox="0 0 800 600" preserveAspectRatio="xMidYMid meet" xmlns="http://www.w3.org/2000/svg">
+      <path d="m582 75 74 318 125 69-350 104L22 428 3 264v-85L582 75z"/>
+    </svg>
   </div>
   <div class="hero__subnav-wrap">
     {% include "@subnav--horizontal" with hero.subnav_horizontal %}
   </div>
+</div>
+
+<div class="admission-aid-explore">
+  <div class="admission-aid-explore__content">
+    <h2 class="admission-aid-explore__title">{{ explore.title }}</h2>
+    <div class="admission-aid-explore__intro">{{ explore.intro|raw }}</div>
+  </div>
+  {% include "@video-embed" with explore.video_embed %}
 </div>
